--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -73,32 +73,9 @@ p {
     margin-left: 20px;
 }
 
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
 .lead, .brand, .cost{
     margin-bottom: 32px;
     color: #ffffff;
-}
-
-
-.benefits h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefits img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
 }
 
 .content section {
@@ -117,6 +94,28 @@ p {
 .content h2 {
     margin-bottom: 20px;
     font-size: 36px;
+}
+
+aside {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
+}
+
+aside h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+aside img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
 }
 
 footer {
