--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,13 +1,12 @@
+/* Border-box makes content inside border the true length and width */ 
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    
 }
 
 body {
     background-color: #d9dcd6;
-    
 }
 
 header {
@@ -25,15 +24,18 @@ nav {
     font-size: 20px;
 }
 
+/* list does not contain bullets or roman numerals */
 nav ul {
     list-style-type: none;
 }
 
+/* list items are side by side */
 nav li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* display is inline-block so that it can be lateral with nav */
 h1 {
     display: inline-block;
     font-size: 48px;
@@ -42,6 +44,16 @@ h1 {
 a {
     color: #ffffff;
     text-decoration: none;
+}
+
+/* when cursor touches links, they are underlined */
+a:hover{
+    border-bottom: 1px solid;
+}
+
+/* while cursor is clicking on links, text color changes */
+a:active {
+color: black;
 }
 
 p {
@@ -57,6 +69,8 @@ p {
     background-position: center;
 }
 
+
+/* floating images are not securely positioned */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -67,6 +81,7 @@ p {
     margin-left: 25px;
 }
 
+/* display is inline-block so that it can be lateral with the aside */
 .content {
     width: 75%;
     display: inline-block;
@@ -96,6 +111,7 @@ p {
     font-size: 36px;
 }
 
+/* turned this div to an aside since it's literally on the side edge */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -111,7 +127,7 @@ aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+ /* block images have their own line separate from the text lines */
 aside img {
     display: block;
     margin: 10px auto;
